--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
     "scrollreveal": "^4.0.9",
     "styled-components": "^5.3.3",
     "web-vitals": "^1.0.1"
+    
+  },
+  "engines": {
+    "node": "16.x"
   },
   "scripts": {
     "start": "react-scripts start",
